opam-version: "2.0"
name: "ezpostgresql"
maintainer: "Bobby Priambodo <bobby.priambodo@gmail.com>"
authors: ["Bobby Priambodo <bobby.priambodo@gmail.com>"]
homepage: "https://github.com/bobbypriambodo/ezpostgresql"
bug-reports: "https://github.com/bobbypriambodo/ezpostgresql/issues"
dev-repo: "git+https://github.com/bobbypriambodo/ezpostgresql"
doc: "https://bobbypriambodo.github.io/ezpostgresql/"
license: ["MIT"]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"          {build & >= "1.0+beta14"}
  "lwt"               {>= "3.0"}
  "postgresql"        {>= "4.0"}
  "lwt_ppx"           {test}
  "alcotest"          {test & >= "0.8"}
  "alcotest-lwt"      {test & >= "0.8"}
]
run-test: ["jbuilder" "runtest" "-p" name "-j" jobs]
