opam-version: "1.2"
name: "ezpostgresql"
maintainer: "Bobby Priambodo <bobby.priambodo@gmail.com>"
authors: ["Bobby Priambodo <bobby.priambodo@gmail.com>"]
homepage: "https://github.com/bobbypriambodo/ezpostgresql"
bug-reports: "https://github.com/bobbypriambodo/ezpostgresql/issues"
dev-repo: "git+https://github.com/bobbypriambodo/ezpostgresql"
doc: "https://bobbypriambodo.github.io/ezpostgresql/"
license: ["MIT"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"              {build}
  "lwt"               {>= "3.0"}
  "postgresql"        {>= "4.0"}
  "lwt_ppx"           {test}
  "alcotest"          {test & >= "0.8"}
  "alcotest-lwt"      {test & >= "0.8"}
]
